# cmake_try

./: .cproject  .project  .travis.yml  CMakeLists.txt
Debug/: cmake_train  makefile
Debug/src/: cmake_train.d  subdir.mk
src/: cmake_train.cpp
